Fix z-index for legend

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 9;
     background: #fff;
     font-size: 12px;
     padding: 5px 15px 15px;
